feat: make favicon configurable as blueprint
... instead of supporting the explicit `favicon` configuration option.

--- a/example_beets_config.yaml
+++ b/example_beets_config.yaml
@@ -15,10 +15,11 @@ plugins:
   - smartplaylist
 
 webrouter:
-  favicon: /favicon.ico
   routes:
     /:
       plugin: web
+    /favicon.ico:
+      plugin: webrouter.favicon
     /subsonic:
       plugin: beetstream
       config:
